# formal-languages-advanced1

./: README.md
src/: Makefile  lib.cpp
testing/: CMakeLists.txt  test_func.h
testing/tests/: test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
testing/tests_c/: test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
